--- a/appconfig.json
+++ b/appconfig.json
@@ -1,7 +1,7 @@
 {
   "appName": "Catalyst League Task Checker",
   "description": "A tool to check your Catalyst League task progress, with features for filtering, pinning, and getting random tasks.",
-  "appUrl": "https://nubles.github.io/Project_B_01/index.html",
+  "appUrl": "index.html",
   "configUrl": "https://nubles.github.io/Project_B_01/appconfig.json",
   "iconUrl": "",
   "defaultWidth": 800,
