--- a/appconfig.json
+++ b/appconfig.json
@@ -1,8 +1,8 @@
-{
+
   "appName": "Catalyst League Task Checker",
   "description": "A tool to check your Catalyst League task progress, with features for filtering, pinning, and getting random tasks.",
-  "appUrl": "index.html",
-  "configUrl": "https://nubles.github.io/Project_B_01/appconfig.json",
+  "appUrl": "./index.html",
+  "configUrl": "./appconfig.json",
   "iconUrl": "",
   "defaultWidth": 800,
   "defaultHeight": 600,
@@ -12,5 +12,5 @@
   "maxHeight": 900,
   "requestHandlers": [],
   "activators": [],
-  "permissions": "network"
+  "permissions": "network,gamestate,overlay"
 }
